--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
+  id 'org.openapi.generator' version '7.7.0'
 }
 
 group = 'dev.fizlrock'
@@ -13,7 +14,12 @@ java {
 	}
 }
 
+springBoot {
+    mainClass = 'dev.fizlrock.suphoto.SuphotoApplication'
+}
+
 configurations {
+
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
