--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 }
 
 tasks.named('test') {
@@ -53,7 +56,7 @@ tasks.named('test') {
 compileJava.dependsOn tasks.openApiGenerate
 
 openApiGenerate {
-	inputSpec='src/main/resources/static/API/spec.yaml'
+	inputSpec='src/main/resources/openapi.yaml'
 	generatorName='spring'
 	additionalProperties = [
 		"useSpringBoot3":"true"	
@@ -63,7 +66,7 @@ openApiGenerate {
 sourceSets {
     main {
         java{
-            srcDirs 'build/generate-resources/main/src/main/java' /* include proto files from base project level */
+            srcDirs 'build/generate-resources/main/src/main/java' 
         }
     }
 }
