--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8181
 spring.application.name=suphoto
+
+spring.datasource.url=jdbc:postgresql://localhost:15432/photodb
+spring.datasource.username=suphoto-service
+spring.datasource.password=gracesecret
+
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.springframework.security=DEBUG
+security.basic.enabled=false
+management.security.enabled=false
+
+
+security.god.default.username=fizlrock
+security.god.default.password=gracesecret
