all classes copyed

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok:1.18.32'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -43,6 +44,8 @@ dependencies {
 
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
+	implementation 'org.modelmapper:modelmapper:3.2.0'
+
 }
 
 tasks.named('test') {
