docker compose support

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
