--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8181
 spring.application.name=suphoto
 
-spring.datasource.url=jdbc:postgresql://localhost:15432/photodb
-spring.datasource.username=suphoto-service
+spring.datasource.url=jdbc:postgresql://147.45.114.179:5432/photodb
+spring.datasource.username=admin
 spring.datasource.password=gracesecret
 
 spring.jpa.hibernate.ddl-auto=validate
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.springframework.security=DEBUG
+# logging.level.org.hibernate=DEBUG
 security.basic.enabled=false
 management.security.enabled=false
 
