--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
   id 'org.openapi.generator' version '7.7.0'
+  id "org.liquibase.gradle" version "2.2.2"
 }
 
 group = 'dev.fizlrock'
@@ -41,12 +42,16 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 
+	liquibaseRuntime 'org.postgresql:postgresql'
+	liquibaseRuntime 'org.liquibase:liquibase-core:4.24.0'
+  liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
+  liquibaseRuntime 'info.picocli:picocli:4.7.5'
+  liquibaseRuntime 'org.yaml:snakeyaml:1.33'
 }
 
 tasks.named('test') {
@@ -75,3 +80,15 @@ sourceSets {
     }
 }
 
+
+liquibase {
+  activities {
+		main {
+			changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
+			url 'jdbc:postgresql://147.45.114.179:5432/photodb'
+			username 'admin'
+			password 'gracesecret'
+			logLevel 'info'
+			}
+  }
+}
