--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8181
 spring.application.name=suphoto
 
-spring.datasource.url=jdbc:postgresql://147.45.114.179:5432/photodb
+spring.datasource.url=jdbc:postgresql://localhost:5432/photodb
 spring.datasource.username=admin
 spring.datasource.password=gracesecret
 
