--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,11 @@ dependencies {
 
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
-	implementation 'org.modelmapper:modelmapper:3.2.0'
+
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 	liquibaseRuntime 'org.postgresql:postgresql'
 	liquibaseRuntime 'org.liquibase:liquibase-core:4.24.0'
