--- a/build.gradle
+++ b/build.gradle
@@ -36,20 +36,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	compileOnly 'org.projectlombok:lombok:1.18.32'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+
+	compileOnly 'org.projectlombok:lombok:1.18.32'
+	runtimeOnly 'org.postgresql:postgresql'
+
+
+	implementation 'org.junit.platform:junit-platform-launcher'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
 
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 	liquibaseRuntime 'org.postgresql:postgresql'
 	liquibaseRuntime 'org.liquibase:liquibase-core:4.24.0'
@@ -59,6 +62,9 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.1'
 
+	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	annotationProcessor 'org.projectlombok:lombok'
 	
 }
 
